--- a/style.css
+++ b/style.css
@@ -31,5 +31,14 @@
 .todo-app h2 img {
     width: 30px;
     margin-left: 10px;
+}
 
+.row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 30px;
+    padding-left: 20px;
+    margin-bottom: 25px;
 }
