--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #153677, #4e085f);
+    background: linear-gradient(135deg, #3494E6, #EC6EAD);
     padding: 10px;
 }
 
@@ -56,7 +56,7 @@ button {
     border: none;
     outline: none;
     padding: 16px 50px;
-    background: #ff5945;
+    background: #e9137e;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
